force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/LaborExchangeCommunity_Task_Config__mdt.object-meta.xml
<CustomObject>
    <label>LaborExchangeCommunity_TaskConfiguration</label>
    <pluralLabel>LaborExchangeCommunity_TaskConfiguration</pluralLabel>
</CustomObject>