force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <inlineHelpText>Controls data type of field, which is mentioned in Field API Name field.</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Text Area Long</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>