force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <inlineHelpText>Controls the field to be populated during task record creation.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>