force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <inlineHelpText>Controls value for field mentioned in Field API Name if Data Type is selected is not from Checkbox, Date, DateTime, TextArea, TextAreaLong.</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>