force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_Value_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls value for field mentioned in Field API Name if Data Type is selected as Checkbox.</inlineHelpText>
    <label>Field Value (Check Box)</label>
    <type>Checkbox</type>
</CustomField>