force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Date__c</fullName>
    <inlineHelpText>Controls value for field mentioned in Field API Name if Data Type is selected as Date.</inlineHelpText>
    <label>Field Value (Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>