force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_Value_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text_Area__c</fullName>
    <inlineHelpText>Controls value for field mentioned in Field API Name if Data Type is selected as TextArea.</inlineHelpText>
    <label>Field Value (Text Area)</label>
    <type>TextArea</type>
</CustomField>