force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/fields/Field_Value_Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text_Area_Long__c</fullName>
    <inlineHelpText>Controls value for field mentioned in Field API Name if Data Type is selected as TextAreaLong.</inlineHelpText>
    <label>Field Value (Text Area Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>