force-app/main/default/objects/LaborExchangeCommunity_Task_Config__mdt/listViews/All_Task_Properties.listView-meta.xml
<ListView>
    <fullName>All_Task_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Data_Type__c</columns>
    <columns>Field_Value__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Value_Check_Box__c</columns>
    <columns>Field_Value_Date__c</columns>
    <columns>Field_Value_DateTime__c</columns>
    <columns>Field_Value_Text_Area__c</columns>
    <columns>Field_Value_Text_Area_Long__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Task Properties</label>
</ListView>